# MusicTagCLI

./: .gitignore  CMakeLists.txt
cmake/: Dependencies.cmake
src/: main.cpp
src/app/: App.cpp  App.hpp  KeyBindings.cpp  KeyBindings.hpp
src/core/: DirectoryScanner.cpp  DirectoryScanner.hpp  FileEntry.hpp  FormatDetector.hpp  TagData.cpp  TagData.hpp  TagReader.cpp  TagReader.hpp  TagWriter.cpp  TagWriter.hpp
src/online/: AcoustIdClient.cpp  AcoustIdClient.hpp  CoverArtClient.cpp  CoverArtClient.hpp  HttpClient.cpp  HttpClient.hpp  MusicBrainzClient.cpp  MusicBrainzClient.hpp  SearchResult.hpp
src/ui/: FileBrowser.cpp  FileBrowser.hpp  MainLayout.cpp  MainLayout.hpp  StatusBar.cpp  StatusBar.hpp  TagEditor.cpp  TagEditor.hpp
src/ui/dialogs/: BatchEditDialog.cpp  BatchEditDialog.hpp  ConfirmDialog.cpp  ConfirmDialog.hpp  CoverArtDialog.cpp  CoverArtDialog.hpp  OnlineLookupDialog.cpp  OnlineLookupDialog.hpp
src/ui/widgets/: TagField.cpp  TagField.hpp
tests/: CMakeLists.txt  test_directory_scanner.cpp  test_tag_reader.cpp  test_tag_writer.cpp
